--- a/stories/components/dataDisplay/EmptyBox.stories.mdx
+++ b/stories/components/dataDisplay/EmptyBox.stories.mdx
@@ -31,6 +31,11 @@ import Typography from '@/components/elements/core/typography/Typography';
 			defaultValue: false,
 			control: { type: 'boolean' },
 		},
+		full: {
+			description: 'type emphasized일 때 width 100% 여부',
+			defaultValue: true,
+			control: { type: 'boolean' },
+		},
 	}}
 />
 
@@ -40,17 +45,6 @@ export const Default = (args, { argTypes }) => ({
 	template: `<NewGrid>
             <NewRow>
                 <NewCol :col-lg="12" :col-sm="4" class="flex justify-around align-center" >
-                    <EmptyBox :type="type" :to="to" :target="target" :external="external">
-                        <template v-slot:title>
-                            제출된 과제가 없습니다.
-                        </template>
-                        <template v-slot:contents>
-                            아래를 눌러 과제를 제출하세요.
-                        </template>
-                        <template v-slot:link>
-                            모집 중인 캠프 보기
-                        </template>
-                    </EmptyBox>
                     <EmptyBox :type="type" :to="to" :target="target" :external="external">
                         <template v-slot:title>
                             제출된 과제가 없습니다.
@@ -110,7 +104,7 @@ export const Default = (args, { argTypes }) => ({
 			components: { EmptyBox, Typography, NewGrid, NewRow, NewCol },
 			template: `<NewGrid>
                     <NewRow>
-                        <NewCol :col-lg="12" :col-sm="4" class="flex justify-around align-center" >
+                        <NewCol :col-lg="12" :col-sm="4" class="flex justify-around align-center">
                             <EmptyBox type="emphasized">
                                 <template v-slot:title>
                                     신청한 캠프가 없습니다.
