fix: 아이콘 이름 변경

--- a/stories/components/dataDisplay/Reply.stories.mdx
+++ b/stories/components/dataDisplay/Reply.stories.mdx
@@ -78,7 +78,7 @@ export const Basic = (args, { argTypes }) => ({
                         {{ name }}
                     </template>
                     <template v-slot:icon>
-                        <Icon name="IconCheckSmallFill" color="primary"/>
+                        <Icon name="IconCheckRoundSmallFill" color="primary"/>
                     </template>
                     <template v-slot:company>
                         {{ company }}
@@ -127,7 +127,7 @@ export const Basic = (args, { argTypes }) => ({
                                     {{ nickname }}
                                 </template>
                                 <template v-slot:icon>
-                                    <Icon name="IconCheckSmallFill" color="primary"/>
+                                    <Icon name="IconCheckRoundSmallFill" color="primary"/>
                                 </template>
                                 <template v-slot:company>
                                     {{ company }}
@@ -145,7 +145,7 @@ export const Basic = (args, { argTypes }) => ({
                                     {{ nickname }}
                                 </template>
                                 <template v-slot:icon>
-                                    <Icon name="IconCheckSmallFill" color="primary"/>
+                                    <Icon name="IconCheckRoundSmallFill" color="primary"/>
                                 </template>
                                 <template v-slot:company>
                                     {{ company }}
