--- a/stories/components/dataDisplay/card/CoreCard.stories.mdx
+++ b/stories/components/dataDisplay/card/CoreCard.stories.mdx
@@ -88,7 +88,7 @@ export const Default = (args, { argTypes }) => ({
 										{{ item.belong }}
 									</template>
 									<template v-slot:icon>
-										<Icon name="IconCheckSmallFill" color="primary"/>
+										<Icon name="IconCheckRoundSmallFill" color="primary"/>
 									</template>
 									<template v-slot:text>
 										<Typography element="p" type="body2" color="gray800" class="text-truncate">
@@ -233,7 +233,7 @@ export const Default = (args, { argTypes }) => ({
                                                 {{ item.belong }}
                                             </template>
                                             <template v-slot:icon>
-                                                <Icon name="IconCheckSmallFill" color="primary"/>
+                                                <Icon name="IconCheckRoundSmallFill" color="primary"/>
                                             </template>
                                             <template v-slot:text>
                                                 <Typography element="p" type="body2" color="gray800" class="text-truncate">
