--- a/stories/components/dataDisplay/content/UserInformation.stories.mdx
+++ b/stories/components/dataDisplay/content/UserInformation.stories.mdx
@@ -60,7 +60,7 @@ export const Basic = (args, { argTypes }) => ({
                 {{ name }}
             </template>
             <template v-slot:icon>
-                <Icon name="IconCheckSmallFill" color="primary"/>
+                <Icon name="IconCheckRoundSmallFill" color="primary"/>
             </template>
             <template v-slot:company>
                 {{ company }}
@@ -134,7 +134,7 @@ export const Basic = (args, { argTypes }) => ({
                                 {{ name }}
                             </template>
                             <template v-slot:icon>
-                                <Icon name="IconCheckSmallFill" color="primary"/>
+                                <Icon name="IconCheckRoundSmallFill" color="primary"/>
                             </template>
                             <template v-slot:company>
                                 {{ company }}
