--- a/stories/components/etc/TellingAvatarQuote.stories.mdx
+++ b/stories/components/etc/TellingAvatarQuote.stories.mdx
@@ -27,7 +27,7 @@ import { colorKeys } from '@/utils/constants/color';
         },
         iconName: {
             description: "아이콘 이름",
-            defaultValue: "IconCheckSmallFill",
+            defaultValue: "IconCheckRoundSmallFill",
             control: {
                 type: "select",
                 options: iconOptions,
@@ -113,7 +113,7 @@ export const Default = (args, { argTypes }) => ({
                                     제가 캠프를 잘 진행할 수 있도록 멘티님을 간단히 소개해주실 수 있나요?
                                 </template>
                                 <template v-slot:icon>
-                                    <Icon name="IconCheckSmallFill" color="primary" />
+                                    <Icon name="IconCheckRoundSmallFill" color="primary" />
                                 </template>
                             </TellingAvatarQuote>
                         </StyleCol>
@@ -132,7 +132,7 @@ export const Default = (args, { argTypes }) => ({
                                     직무부트캠프를 통해 실무를 제대로 경험할 수 있도록 도와드릴게요.
                                 </template>
                                 <template v-slot:icon>
-                                    <Icon name="IconCheckSmallFill" color="primary" />
+                                    <Icon name="IconCheckRoundSmallFill" color="primary" />
                                 </template>
                             </TellingAvatarQuote>
                         </StyleCol>
