--- a/stories/components/dataEntry/input/InputGroup.stories.mdx
+++ b/stories/components/dataEntry/input/InputGroup.stories.mdx
@@ -20,7 +20,7 @@ export const Default = (args, { argTypes }) => ({
         `<Box>
              <InputGroup>
                  <TextField placeholder="쿠폰 코드를 입력하세요" full />
-                 <Button type="outline" color="secondary">등록하기</Button>
+                 <Button type="outline" color="info">등록하기</Button>
              </InputGroup>
          </Box>`,
 });
