--- a/stories/components/message/modal/WithFormModal.stories.mdx
+++ b/stories/components/message/modal/WithFormModal.stories.mdx
@@ -173,7 +173,7 @@ export const Default = (args, { argTypes }) => ({
                                         placeholder="쿠폰코드를 입력하세요"
                                     />
                                 </span>
-                                <Button type="outline" color="secondary" @click="handleSubmitModal">등록하기</Button>
+                                <Button type="outline" color="info" @click="handleSubmitModal">등록하기</Button>
                             </InputGroup>
                         </template>
                     </WithFormModal>
