feat: avatar type mentor -> nickname, mentee -> profile

--- a/stories/components/dataDisplay/Avatar.stories.mdx
+++ b/stories/components/dataDisplay/Avatar.stories.mdx
@@ -68,15 +68,15 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <div>
-                  <Avatar type="mentor" size="xsmall" class="mr-24" />
-                  <Avatar type="mentor" size="small" class="mr-24" />
-                  <Avatar type="mentor" size="medium" class="mr-24" />
-                  <Avatar type="mentor" size="large" />
+                  <Avatar type="nickname" size="xsmall" class="mr-24" />
+                  <Avatar type="nickname" size="small" class="mr-24" />
+                  <Avatar type="nickname" size="medium" class="mr-24" />
+                  <Avatar type="nickname" size="large" />
                   <hr class="mt-8 mb-8">
-                  <Avatar type="mentee" size="xsmall" class="mr-24" />
-                  <Avatar type="mentee" size="small" class="mr-24" />
-                  <Avatar type="mentee" size="medium" class="mr-24" />
-                  <Avatar type="mentee" size="large" />
+                  <Avatar type="profile" size="xsmall" class="mr-24" />
+                  <Avatar type="profile" size="small" class="mr-24" />
+                  <Avatar type="profile" size="medium" class="mr-24" />
+                  <Avatar type="profile" size="large" />
                   <hr class="mt-8 mb-8">
                   <Avatar type="logo" size="xsmall"  class="mr-24" />
                   <Avatar type="logo" size="small"  class="mr-24" />
