fix: underline 으로 통일

--- a/stories/components/dataEntry/Select.stories.mdx
+++ b/stories/components/dataEntry/Select.stories.mdx
@@ -108,7 +108,7 @@ export const Default = (args, { argTypes }) => ({
                         <Select v-model="select1" :options="options" />
                     </div>
                     <div class="mb-10">
-                        <Select v-model="select2" :options="options" type="underlined" />
+                        <Select v-model="select2" :options="options" type="underline" />
                     </div>
                 </div>
         `,
