--- a/stories/components/dataDisplay/Avatar.stories.mdx
+++ b/stories/components/dataDisplay/Avatar.stories.mdx
@@ -15,7 +15,6 @@ import Avatar, { avatarSizes, avatarTypes } from '@/components/components/dataDi
         },
         type: {
             description: "아바타 타입",
-            defaultValue: "text",
             control: {
                 type: "select",
                 options: avatarTypes,
@@ -48,7 +47,7 @@ export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { Avatar },
     template:
-        `<Avatar :type="type" :src="src" :size="size" :text="text" />`,
+        `<Avatar :type="type" :src="src" :size="size" :text="text" :color="color" />`,
 });
 
 # Avatar
@@ -69,10 +68,10 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <div>
-                  <Avatar type="text" size="xsmall" class="mr-24" />
-                  <Avatar type="text" size="small" class="mr-24" />
-                  <Avatar type="text" size="medium" class="mr-24" />
-                  <Avatar type="text" size="large" />
+                  <Avatar type="nickname" size="xsmall" class="mr-24" />
+                  <Avatar type="nickname" size="small" class="mr-24" />
+                  <Avatar type="nickname" size="medium" class="mr-24" />
+                  <Avatar type="nickname" size="large" />
                   <hr class="mt-8 mb-8">
                   <Avatar type="profile" size="xsmall" class="mr-24" />
                   <Avatar type="profile" size="small" class="mr-24" />
