--- a/stories/components/dataEntry/input/Textfield.stories.mdx
+++ b/stories/components/dataEntry/input/Textfield.stories.mdx
@@ -2,104 +2,102 @@ import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import Grid from '@/components/layout/Grid';
 import Row from '@/components/layout/Row';
 import StyleCol from '@/components/layout/StyleCol';
-import TextField, { TextFieldTypes, TextFieldAligns, TextFieldColor } from '@/components/components/dataEntry/input/TextField';
+import TextField, { TextFieldTypes, TextFieldAligns } from '@/components/components/dataEntry/input/TextField';
 import Typography from '@/components/elements/core/typography/Typography';
 import Icon from '@/components/elements/core/icon/Icon';
 import Loader from '@/components/components/other/Loader';
+import InputGroup from '@/components/components/dataEntry/input/InputGroup';
+import Button from '@/components/components/general/button/Button';
 
 <Meta
-    title="Data Entry/Input/TextField"
-    component={ TextField }
-    argTypes={{
-        type: {
-            description: "텍스트필드 type",
-            control: {
-            type: "select",
-            options: TextFieldTypes,
-           },
-        },
-        outline: {
-            description: "텍스트필드 outline (true) / underline(false)",
-            defaultValue: false,
-            control: { type: "boolean" },
-        },
-        placeholder: {
-            description: "체크박스 placeholder 문구",
-            defaultValue: '',
-            control: { type: "text" },
-        },
-        label: {
-            description: "텍스트필드 label에 들어갈 텍스트",
-            defaultValue: '',
-            control: { type: "text" },
-        },
-        active: {
-            description: "텍스트필드 활성화 여부 ",
-            defaultValue: false,
-            control: { type: "boolean" },
-        },
-        focus: {
-            description: "텍스트필드 focus 활성화",
-            defaultValue: false,
-            control: { type: "boolean" },
-        },
-        align: {
-            description: "텍스트필드 text 정렬",
-            control: {
-                type: "select",
-                options: TextFieldAligns,
-            },
-        },
-        readonly: {
-            description: "텍스트필드 readonly 활성화",
-            defaultValue: false,
-            control: { type: "boolean" },
-        },
-        disabled: {
-            description: "텍스트필드 disabled 활성화",
-            defaultValue: false,
-            control: { type: "boolean" },
-        },
-        color: {
-            description: "hint color",
-            control: {
-                type: "select",
-                options: TextFieldColor,
-           },
-        },
-        hint:{
-            description: "텍스트필드 에러메시지",
-            defaultValue: '',
-            control: { type: "text" },
-        },
-        value: {
-            description: "TextArea 들어갈 텍스트",
-            defaultValue: null,
-            control: { type: "text" },
-        },
-        full: {
-            description: "width 100%를 차지할 것인지",
-            control: { type: "boolean" },
-        },
-        autocomplete: {
-            description: "자동완성",
-            control: { type: "boolean" },
-        },
-        id: {
-            description: "아이디 (없으면 textField-randomNumber)",
-            control: {
-                type: "text"
-            }
-        }
-    }}
+	title="Data Entry/Input/TextField"
+	component={TextField}
+	argTypes={{
+		type: {
+			description: '텍스트필드 type',
+			control: {
+				type: 'select',
+				options: TextFieldTypes,
+			},
+		},
+		outline: {
+			description: '텍스트필드 outline (true) / underline(false)',
+			defaultValue: false,
+			control: { type: 'boolean' },
+		},
+		placeholder: {
+			description: '체크박스 placeholder 문구',
+			defaultValue: '',
+			control: { type: 'text' },
+		},
+		label: {
+			description: '텍스트필드 label에 들어갈 텍스트',
+			defaultValue: '',
+			control: { type: 'text' },
+		},
+		active: {
+			description: '텍스트필드 활성화 여부 ',
+			defaultValue: false,
+			control: { type: 'boolean' },
+		},
+		focus: {
+			description: '텍스트필드 focus 활성화',
+			defaultValue: false,
+			control: { type: 'boolean' },
+		},
+		align: {
+			description: '텍스트필드 text 정렬',
+			control: {
+				type: 'select',
+				options: TextFieldAligns,
+			},
+		},
+		readonly: {
+			description: '텍스트필드 readonly 활성화',
+			defaultValue: false,
+			control: { type: 'boolean' },
+		},
+		disabled: {
+			description: '텍스트필드 disabled 활성화',
+			defaultValue: false,
+			control: { type: 'boolean' },
+		},
+		hint: {
+			description: '텍스트필드 에러메시지',
+			defaultValue: '',
+			control: { type: 'text' },
+		},
+		value: {
+			description: 'TextArea 들어갈 텍스트',
+			defaultValue: null,
+			control: { type: 'text' },
+		},
+		full: {
+			description: 'width 100%를 차지할 것인지',
+			control: { type: 'boolean' },
+		},
+		autocomplete: {
+			description: '자동완성',
+			control: { type: 'boolean' },
+		},
+		id: {
+			description: '아이디 (없으면 textField-randomNumber)',
+			control: {
+				type: 'text',
+			},
+		},
+	}}
 />
 
-
 export const Default = (args, { argTypes }) => ({
-    props: Object.keys(argTypes),
-    components: { TextField },
-    template:
-        `<TextField
+	props: Object.keys(argTypes),
+	data() {
+		return {
+			valueProp: this.value,
+		};
+	},
+	components: { TextField },
+	template: `<TextField
             :type="type"
             :outline="outline"
             :placeholder="placeholder"
@@ -109,12 +107,13 @@ export const Default = (args, { argTypes }) => ({
             :focus="focus"
             :readonly="readonly"
             :disabled="disabled"
-            :value.sync="value"
+            :value.sync="valueProp"
+            :error="error"
             :hint="hint"
-            :color="color"
             :full="full"
             :autocomplete="autocomplete"
             :id="id"
+            :persistent-hint="persistentHint"
         />`,
 });
 
@@ -123,218 +122,327 @@ export const Default = (args, { argTypes }) => ({
 **TextField** 컴포넌트의 문서입니다.
 
 <Story name="Default" height="100px">
-    {Default.bind({})}
+	{Default.bind({})}
 </Story>
 
 <ArgsTable story="Default" />
 
 ## Stories
-### Hint default
+
+### Outline
+
 <Canvas>
-    <Story name="Hint Default" height="200px">
-        {{
-            template: `
+	<Story name="Outline" height="200px">
+		{{
+			template: `
                 <div style="width:300px">
                     <TextField
                         type="text"
-                        color="error"
-                        hint="내용을 입력해주세요."
-                        :outline="false"
-                        placeholder="underline + hint "
+                        outline
+                        placeholder="default"
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        color="error"
-                        hint="내용을 입력해주세요."
-                        :outline="false"
-                        label="label"
-                        placeholder="underline + hint + label"
+                        outline
+                        placeholder="focus"
                         active
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        color="error"
-                        hint="내용을 입력해주세요."
                         outline
-                        placeholder="outline + hint "
+                        value="typing"
+                        active
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        color="error"
-                        hint="내용을 입력해주세요."
                         outline
-                        label="label"
-                        placeholder="outline + hint + label"
-                        active
+                        placeholder="error"
+                        error
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        outline
+                        placeholder="readonly"
+                        readonly
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        outline
+                        placeholder="disabled"
+                        disabled
                         class="mb-20"
                     />
                 </div>
             `,
-            components: { TextField },
-        }}
-    </Story>
+			components: { TextField },
+		}}
+	</Story>
 </Canvas>
 
-### Hint Secondary
+### Outline + label
 
 <Canvas>
-    <Story name="Hint Secondary" height="200px">
-        {{
-            template: `
+	<Story name="Outline + label" height="200px">
+		{{
+			template: `
                 <div style="width:300px">
                     <TextField
                         type="text"
-                        color="secondary"
-                        hint="내용을 입력해주세요."
-                        :outline="false"
-                        placeholder="underline + hint "
+                        label="label"
+                        outline
+                        placeholder="default"
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        color="secondary"
-                        hint="내용을 입력해주세요."
-                        :outline="false"
                         label="label"
-                        placeholder="underline + hint + label"
+                        outline
+                        placeholder="focus"
                         active
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint="내용을 입력해주세요."
-                        color="secondary"
+                        label="label"
                         outline
-                        placeholder="outline + hint"
+                        value="typing"
+                        active
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint="내용을 입력해주세요."
-                        color="secondary"
-                        outline
                         label="label"
-                        placeholder="outline + hint + label"
+                        outline
+                        placeholder="error"
+                        error
                         active
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        label="label"
+                        outline
+                        placeholder="readonly"
+                        readonly
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        label="label"
+                        outline
+                        placeholder="disabled"
+                        disabled
                         class="mb-20"
                     />
                 </div>
             `,
-            components: { TextField },
-        }}
-    </Story>
+			components: { TextField },
+		}}
+	</Story>
 </Canvas>
 
-### Hint Success
+### Underline
+
 <Canvas>
-    <Story name="Hint Success" height="200px">
-        {{
-            template: `
+	<Story name="Underline" height="200px">
+		{{
+			template: `
                 <div style="width:300px">
                     <TextField
                         type="text"
-                        color="success"
-                        hint="내용을 입력해주세요."
-                        :outline="false"
-                        placeholder="underline + hint"
+                        placeholder="default"
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        color="success"
-                        hint="내용을 입력해주세요."
-                        :outline="false"
-                        label="label"
-                        placeholder="underline + hint + label"
+                        placeholder="focus"
                         active
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint="내용을 입력해주세요."
-                        color="success"
-                        outline
-                        placeholder="outline + hint"
+                        value="typing"
+                        active
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint="내용을 입력해주세요."
-                        color="success"
-                        outline
-                        label="label"
-                        placeholder="outline + hint + label"
+                        placeholder="error"
+                        error
                         active
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        placeholder="readonly"
+                        readonly
                         class="mb-20"
                     />
                 </div>
             `,
-            components: { TextField },
-        }}
-    </Story>
+			components: { TextField },
+		}}
+	</Story>
 </Canvas>
 
-### Hint Primary
+### Align
+
 <Canvas>
-    <Story name="Hint Primary" height="200px">
-        {{
-            template: `
+	<Story name="Align" height="200px">
+		{{
+			template: `
                 <div style="width:300px">
                     <TextField
                         type="text"
-                        color="primary"
-                        hint="내용을 입력해주세요."
-                        :outline="false"
-                        placeholder="underline + hint "
-                        class="mb-20"
-                    />
-                    <TextField
-                        type="text"
-                        color="primary"
-                        hint="내용을 입력해주세요."
-                        :outline="false"
-                        label="label"
-                        placeholder="underline + hint + label"
-                        active
-                        class="mb-20"
-                    />
-                    <TextField
-                        type="text"
-                        hint="내용을 입력해주세요."
-                        color="primary"
+                        align="left"
                         outline
-                        placeholder="outline + hint"
+                        placeholder="placeholder"
                         class="mb-20"
                     />
                     <TextField
                         type="text"
-                        hint="내용을 입력해주세요."
-                        color="primary"
+                        align="left"
+                        placeholder="placeholder"
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        align="center"
                         outline
-                        label="label"
-                        placeholder="outline + hint + label"
-                        active
+                        placeholder="placeholder"
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        align="center"
+                        placeholder="placeholder"
                         class="mb-20"
                     />
                 </div>
             `,
-            components: { TextField },
-        }}
-    </Story>
+			components: { TextField },
+		}}
+	</Story>
+</Canvas>
+
+### With Message
+
+<Canvas>
+	<Story name="With Hint" height="200px">
+		{{
+			template: `
+                <div style="width:300px">
+                    <TextField
+                        type="text"
+                        hint="메시지는 선택사항입니다"
+                        outline
+                        placeholder="hint, no label"
+                        active
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        hint="메시지는 선택사항입니다"
+                        label="label"
+                        outline
+                        placeholder="hint, with label"
+                        active
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        hint="메시지는 선택사항입니다"
+                        label="label"
+                        placeholder="hint, with label, underline"
+                        active
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        hint="메시지는 선택사항입니다"
+                        label="label"
+                        outline
+                        placeholder="hint, with label, error"
+                        active
+                        error
+                        class="mb-20"
+                    />
+                    <TextField
+                        type="text"
+                        hint="메시지는 선택사항입니다"
+                        label="label"
+                        placeholder="hint, with label, error, underline"
+                        active
+                        error
+                        class="mb-20"
+                    />
+                </div>
+            `,
+			components: { TextField },
+		}}
+	</Story>
+</Canvas>
+
+### With Button
+
+<Canvas>
+	<Story name="With Button" height="200px">
+		{{
+			template: `
+                <div style="width:300px">
+                    <InputGroup class="mb-20">
+                        <TextField
+                            type="text"
+                            placeholder="placeholder"
+                            outline
+                        />
+                        <Button>Button</Button>
+                    </InputGroup>
+                    <InputGroup class="mb-20">
+                        <TextField
+                            type="text"
+                            placeholder="placeholder"
+                        />
+                        <Button>Button</Button>
+                    </InputGroup>
+                    <InputGroup class="mb-20">
+                        <TextField
+                            type="text"
+                            placeholder="placeholder"
+                            outline
+                            value="코멘토 타이핑시스템"
+                        />
+                        <Button>Button</Button>
+                    </InputGroup>
+                    <InputGroup class="mb-20">
+                        <TextField
+                            type="text"
+                            placeholder="placeholder"
+                            value="코멘토 타이핑시스템"
+                        />
+                        <Button>Button</Button>
+                    </InputGroup>
+                </div>
+            `,
+			components: { TextField, InputGroup, Button },
+		}}
+	</Story>
 </Canvas>
 
 ### Full
+
 <Canvas>
-    <Story name="Full" height="200px">
-        {{
-            template: `
+	<Story name="Full" height="200px">
+		{{
+			template: `
                 <div>
                     <TextField
                         type="text"
-                        color="primary"
                         hint="내용을 입력해주세요."
                         :outline="false"
                         placeholder="underline + hint "
@@ -343,50 +451,52 @@ export const Default = (args, { argTypes }) => ({
                     />
                 </div>
             `,
-            components: { TextField },
-        }}
-    </Story>
+			components: { TextField },
+		}}
+	</Story>
 </Canvas>
 
 ### Validate
+
 <Canvas>
-    <Story name="Validate" height="200px">
-        {{
-            template: `
+	<Story name="Validate" height="200px">
+		{{
+			template: `
                 <div>
                     <Typography type="body2" color="gray500" class="mb-4">이름</Typography>
                     <TextField
                         type="text"
-                        :color="isError ? 'error' : 'secondary'"
                         :hint="isError ? '두 글자 이상 입력해 주세요.' : '실명을 입력하세요. 입력된 이름으로 수료증이 발급됩니다.'"
                         outline
                         placeholder="코멘티"
                         :active="isError"
+                        :error="isError"
                         :value.sync="name"
                     />
                 </div>
             `,
-            data() {
-                return {
-                    name: null,
-                    isError: false,
-                };
-            },
-            watch: {
-                name() {
-                    this.isError = this.name.length < 2;
-                }
-            },
-            components: { TextField, Typography },
-        }}
-    </Story>
+			data() {
+				return {
+					name: null,
+					isError: false,
+				};
+			},
+			watch: {
+				name() {
+					this.isError = this.name.length < 2;
+				},
+			},
+			components: { TextField, Typography },
+		}}
+	</Story>
 </Canvas>
 
 ### Append Slot
+
 <Canvas>
-    <Story name="AppendSlot" height="200px">
-        {{
-            template: `
+	<Story name="AppendSlot" height="200px">
+		{{
+			template: `
                 <Grid>
                     <Row class="mb-10">
                         <StyleCol :col-lg="4" col-gutters>
@@ -453,18 +563,7 @@ export const Default = (args, { argTypes }) => ({
                     </Row>
                 </Grid>
             `,
-            data() {
-                return {
-                    name: null,
-                    isError: false,
-                };
-            },
-            watch: {
-                name() {
-                    this.isError = this.name.length < 2;
-                }
-            },
-            components: { Grid, Row, StyleCol, TextField, Typography, Loader, Icon },
-        }}
-    </Story>
+			components: { Grid, Row, StyleCol, TextField, Typography, Loader, Icon },
+		}}
+	</Story>
 </Canvas>
