--- a/stories/components/dataDisplay/content/UserInformation.stories.mdx
+++ b/stories/components/dataDisplay/content/UserInformation.stories.mdx
@@ -54,7 +54,7 @@ export const Basic = (args, { argTypes }) => ({
     template: `
         <UserInformation :type="type">
             <template v-slot:avatar>
-                <Avatar type="text" :text="name.substr(0, 1)" :size="avatarSize"/>
+                <Avatar type="nickname" :text="name.substr(0, 1)" :size="avatarSize"/>
             </template>
             <template v-slot:name>
                 {{ name }}
@@ -128,7 +128,7 @@ export const Basic = (args, { argTypes }) => ({
                     <template v-for="({ name, company, matchedItems, size, type }, index) in sampleItems">
                         <UserInformation :type="type" :key="'user-information' + index">
                             <template v-slot:avatar>
-                                <Avatar type="text" :text="name.substr(0, 1)" :size="size"/>
+                                <Avatar type="nickname" :text="name.substr(0, 1)" :size="size"/>
                             </template>
                             <template v-slot:name>
                                 {{ name }}
