--- a/stories/components/dataDisplay/card/CoreCard.stories.mdx
+++ b/stories/components/dataDisplay/card/CoreCard.stories.mdx
@@ -82,7 +82,7 @@ export const Default = (args, { argTypes }) => ({
 							<template v-if="repliesTemp" >
 								<ProfileWithText v-for="(item, index) in repliesTemp" v-if="index < showRepliesCount" :key="'reply-' + index">
 									<template v-slot:avatar>
-										<Avatar type="text" :text="item.belong.substr(0, 1)" size="small"/>
+										<Avatar type="nickname" :text="item.belong.substr(0, 1)" size="small"/>
 									</template>
 									<template v-slot:name>
 										{{ item.belong }}
@@ -227,7 +227,7 @@ export const Default = (args, { argTypes }) => ({
                                     <template v-for="(item, index) in item.replies">
                                         <ProfileWithText v-if="index < 2" :key="'reply-' + item.id">
                                             <template v-slot:avatar>
-                                                <Avatar type="text" :text="item.belong.substr(0, 1)" size="small"/>
+                                                <Avatar type="nickname" :text="item.belong.substr(0, 1)" size="small"/>
                                             </template>
                                             <template v-slot:name>
                                                 {{ item.belong }}
