--- a/stories/components/general/button/ButtonGroup.stories.mdx
+++ b/stories/components/general/button/ButtonGroup.stories.mdx
@@ -79,13 +79,13 @@ export const Default = (args, { argTypes }) => ({
                 <div>
                     <Typography color="gray800">Horizontal ButtonGroup</Typography>
                     <ButtonGroup size="small" style="margin-bottom: 10px">
-                        <Button size="small" type="text" color="secondary">
+                        <Button size="small" type="text" color="info">
                             <template v-slot:left-icon>
                                 <Icon name="IconPlusSmallLine" color="gray500" />
                             </template>
                             Button
                         </Button>
-                        <Button size="small" type="text" color="secondary">
+                        <Button size="small" type="text" color="info">
                             <template v-slot:left-icon>
                                 <Icon name="IconPlusSmallLine" color="gray500" />
                             </template>
