--- a/stories/components/dataEntry/RadioButton.stories.mdx
+++ b/stories/components/dataEntry/RadioButton.stories.mdx
@@ -117,7 +117,7 @@ export const Default = (args, { argTypes }) => ({
                         <h3 class="mb-12"> color</h3>
                         <RadioButton size="medium" class="mb-4" name="size" font-color="green600">primary</RadioButton>
                         <RadioButton size="medium" class="mb-4" name="size" radio-color="success" font-color="blue600">success</RadioButton>
-                        <RadioButton size="medium" class="mb-4" name="size" radio-color="info" font-color="gray600">secondary</RadioButton>
+                        <RadioButton size="medium" class="mb-4" name="size" radio-color="info" font-color="gray600">info</RadioButton>
                         <RadioButton size="medium" class="mb-4" name="size" radio-color="error" font-color="red600">error</RadioButton>
                     </div>
                 </div>
