fix: 스토리 변경 사항 반영

--- a/stories/components/dataDisplay/EmptyBox.stories.mdx
+++ b/stories/components/dataDisplay/EmptyBox.stories.mdx
@@ -32,7 +32,7 @@ import Typography from '@/components/elements/core/typography/Typography';
 			control: { type: 'boolean' },
 		},
 		full: {
-			description: 'type emphasized일 때 width 100% 여부',
+			description: 'width 100% 여부',
 			defaultValue: true,
 			control: { type: 'boolean' },
 		},
