--- a/stories/components/dataDisplay/Reply.stories.mdx
+++ b/stories/components/dataDisplay/Reply.stories.mdx
@@ -5,69 +5,66 @@ import Avatar from '@/components/components/dataDisplay/Avatar';
 import Icon from '@/components/elements/core/icon/Icon';
 
 <Meta
-    title="Data Display/Reply"
-    component={ Reply }
-    argTypes={{
-        value: {
-            description: "댓글 내용",
-            defaultValue: "댓글 내용이 표시됩니다.",
-            control: { type: "text" },
-        },
-        date: {
-            description: "날짜",
-            defaultValue: "21.09.02",
-            control: { type: "text" },
-        },
-        type: {
-            description: "댓글 타입",
-            defaultValue: "default",
-            control: {
-                type: "select",
-                options: [
-                    "default",
-                    "simple"
-                ],
-            }
-        },
-        showReport: {
-            description: "신고 버튼 보여주기",
-            control: {
-                type: "boolean"
-            }
-        }
-    }}
+	title="Data Display/Reply"
+	component={Reply}
+	argTypes={{
+		value: {
+			description: '댓글 내용',
+			defaultValue: '댓글 내용이 표시됩니다.',
+			control: { type: 'text' },
+		},
+		date: {
+			description: '날짜',
+			defaultValue: '21.09.02',
+			control: { type: 'text' },
+		},
+		type: {
+			description: '댓글 타입',
+			defaultValue: 'default',
+			control: {
+				type: 'select',
+				options: ['default', 'simple'],
+			},
+		},
+		showReport: {
+			description: '신고 버튼 보여주기',
+			control: {
+				type: 'boolean',
+			},
+		},
+	}}
 />
 
 export const Basic = (args, { argTypes }) => ({
-    props: Object.keys(argTypes),
-    components: { Reply, UserInformation, Avatar, Icon },
-    data() {
-        return {
-            name: '닉네임',
-            company: '코멘토',
-        };
-    },
-    computed: {
-        avatarSize() {
-            const sizes = {
-                default: 'small',
-                simple: 'xsmall',
-            }
-            return sizes[this.type];
-        },
-        userInformationType() {
-            if (this.type === 'default') {
-                return 'normal';
-            }
-            return this.type;
-        },
-    },
-    methods: {
-        openReportModal() {
-            alert('신고하기 버튼 클릭');
-        }
-    },
-    template: `
+	props: Object.keys(argTypes),
+	components: { Reply, UserInformation, Avatar, Icon },
+	data() {
+		return {
+			name: '닉네임',
+			company: '코멘토',
+		};
+	},
+	computed: {
+		avatarSize() {
+			const sizes = {
+				default: 'small',
+				simple: 'xsmall',
+			};
+			return sizes[this.type];
+		},
+		userInformationType() {
+			if (this.type === 'default') {
+				return 'normal';
+			}
+			return this.type;
+		},
+	},
+	methods: {
+		openReportModal() {
+			alert('신고하기 버튼 클릭');
+		},
+	},
+	template: `
         <Reply :value="value" :date="date" :show-report="showReport" @clickReportButton="openReportModal">
             <template v-slot:user-information>
                 <UserInformation :type="userInformationType">
@@ -93,29 +90,30 @@ export const Basic = (args, { argTypes }) => ({
 **Reply** 컴포넌트의 문서입니다.
 
 <Story name="Basic" height="100px">
-    {Basic.bind({})}
+	{Basic.bind({})}
 </Story>
 
 <ArgsTable story="Basic" />
 
-
 ## Stories
+
 ### All
+
 <Canvas>
-    <Story name="All" height="100px">
-        {{
-            data() {
-                return {
-                    nickname: '레오나',
-                    company: '코멘토',
-                };
-            },
-            methods: {
-                openReportModal() {
-                    alert('신고하기 버튼 클릭');
-                }
-            },
-            template: `
+	<Story name="All" height="100px">
+		{{
+			data() {
+				return {
+					nickname: '레오나',
+					company: '코멘토',
+				};
+			},
+			methods: {
+				openReportModal() {
+					alert('신고하기 버튼 클릭');
+				},
+			},
+			template: `
                 <div>
                     <Reply value="댓글 내용이 표시됩니다." date="21.09.02" @clickReportButton="openReportModal">
                         <template v-slot:user-information>
@@ -155,8 +153,7 @@ export const Basic = (args, { argTypes }) => ({
                     </Reply>
                 </div>
             `,
-            components: { Reply, UserInformation, Avatar, Icon },
-        }}
-    </Story>
+			components: { Reply, UserInformation, Avatar, Icon },
+		}}
+	</Story>
 </Canvas>
-
