feat: coreCard rating 색상, 예시 변경

--- a/stories/components/dataDisplay/card/CoreCard.stories.mdx
+++ b/stories/components/dataDisplay/card/CoreCard.stories.mdx
@@ -85,10 +85,11 @@ export const Default = (args, { argTypes }) => ({
 										<Avatar type="nickname" :text="item.belong.substr(0, 1)" size="small"/>
 									</template>
 									<template v-slot:name>
-										{{ item.belong }}
+                                        <Typography type="body2" color="gray850" font-weight="bold" element="span">닉네임</Typography>
+                                        <Typography type="caption1" font-weight="normal" element="span" color="gray500">{{ item.belong }}</Typography>
 									</template>
 									<template v-slot:icon>
-										<Icon name="IconCheckRoundSmallFill" color="primary"/>
+										<Icon name="IconCheckRoundSmallFill" color="gray400"/>
 									</template>
 									<template v-slot:text>
 										<Typography element="p" type="body2" color="gray800" class="text-truncate">
